
	* src/ejabberd_s2s_in.erl (wait_for_feature_request/2): Replace
	jlib:nameprep/1 by exmpp_stringprep:nameprep/1 and change the error
	handling.

	* src/ejabberd_config.erl (normalize_hosts/2): Replace jlib:nodeprep/1
	by exmpp_stringprep:nodeprep/1 and change the error handling.

	*  src/ejabberd_c2s.erl (handle_sync_event/4): Remove a remaining
	jlib:jid_remove_resource/1 call.

2008-10-09  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_c2s.erl: Fix handling of unauthenticated stanzas which
	are not request IQ. Thanks to Pablo Polvorin!

2008-10-08  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Merge from trunk (r1563 to r1613).

2008-10-07  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_local.erl: Fix a bug where an error stanza was not
	created correctly, leading to ejabberd_c2s crash.

	* src/mod_stats.erl, src/mod_service_log.erl, src/mod_time.erl:
	Convert to exmpp.

	* src/mod_private.erl, src/mod_private_odbc.erl, src/mod_version.erl:
	Convert to exmpp. Thanks to Pablo Polvorin!

2008-10-07  Jerome Sautret  <jerome.sautret@process-one.net>

	* src/mod_roster_odbc.erl: fix MySQL multiple requests issue.

2008-10-06  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_sm.erl (process_iq/3): Fix a bug where we were matching
	on #iq.type instead of #iq.kind, resulting in bad-request sent to the
	client.

	* src/ejabberd_c2s.erl (process_privacy_iq/4): mod_privacy & friends
	may return an empty list. Thanks to Pablo Polvorin!

	* src/mod_roster_odbc.erl (get_jid_info/4): Fix a confusion between
	#jid and tuples. Thanks to Pablo Polvorin!

	* src/mod_privacy.erl, src/mod_privacy_odbc.erl: Convert to exmpp.
	Thanks to Pablo Polvorin!

	* src/mod_privacy.erl: The Mnesia table wasn't updated when converting
	from an old schema.

	* src/ejabberd_sm.erl, src/mod_roster.erl, src/mod_roster_odbc.erl:
	Fix status handling by always using binaries: until now, we were